# fin-path-insight

./: .env  .env.consolidated  .env.development  .env.example  .env.old  .env.production  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  EODHD_API_DOCUMENTATION.md  FinPath_Insight_API.postman_collection.json  GOOGLE_SERVICE_ACCOUNT_JSON_BASE64.txt  INDIAN_API_STRATEGY.md  NETLIFY_DEPLOYMENT.md  PHASE_1_2_IMPLEMENTATION_COMPLETE.md  PHASE_3_COMPLETE.md  PRODUCTION-DEPLOYMENT.md  README.md  README.md.new  README_API_SERVICES.md  SETUP_GUIDE.md  SUPABASE-SETUP.md  api-test-results-2025-05-13T08-58-16-627Z.json  api-test-results-2025-05-13T09-02-00-253Z.json  api-test-results-2025-05-13T09-08-33-948Z.json  api-test-results-2025-05-13T09-21-40-462Z.json  api-test-results-2025-05-13T10-06-33-687Z.json  api-test-results-2025-05-13T10-10-47-752Z.json  api-test-results-2025-05-14T18-32-11-454Z.json  api-test-results-2025-05-14T18-34-14-356Z.json  api-test-results-2025-05-14T18-39-28-146Z.json  api-test-results-2025-05-14T18-43-30-024Z.json  api-test-results-2025-05-14T18-44-20-725Z.json  api-test-results-2025-05-14T19-06-33-308Z.json  api-test-results-2025-05-14T20-06-39.121Z.json  api-test-results-2025-05-14T20-19-58.121Z.json  api-test-results-2025-05-14T20-21-41.605Z.json  api-test-results-2025-05-14T20-24-15.677Z.json  api-test-results-2025-05-14T20-31-32.156Z.json  (+43 more)
fastapi-backend/: .env  .env.example  .env.template  README.md  RENDER_DEPLOYMENT.md  app.py  build.sh  create_cache_table.sql  deploy-render.js  install_dependencies.py  minimal_app.py  (+11 more)
(+381 files in other folders)
